fix: :ambulance: fix overflow mobile

--- a/folders.colored.css
+++ b/folders.colored.css
@@ -267,9 +267,10 @@ div:not(.is-mobile)
 
 .nav-file-title {
   margin: 0;
+  padding-left: 0;
 }
 
-/* Set up explorer container margins */
+/* Set up explorer container margins */ 
 
 .nav-files-container {
   margin: 0px 5px;
@@ -339,8 +340,8 @@ div:not(.is-mobile)
 
 /* 16 Top level Folders By Starting Digit (0-F)
 These are set for me by leading number/letter which also ensures they are in the correct order when sorted alphabetically
-You can change these to match your use case.
-*/
+You can change these to match your use case. */
+
 
 .nav-folder.mod-root
   > .nav-folder-children
@@ -507,7 +508,12 @@ You can change these to match your use case.
 
 /* Relationship lines for 2nd, 3rd, and 4th level folders */
 
+
+
 @media only screen and (max-device-width: 1024px) {
+  .is-mobile .nav-folder.mod-root {
+    overflow: hidden !important;
+  }
   .nav-folder.mod-root
     > .nav-folder-children
     > .nav-folder
@@ -687,9 +693,11 @@ You can change these to match your use case.
   transition: all 0.5s ease;
 }
 
+
 .nav-file.is-active > .nav-file-title {
   padding-left: 5px;
-}
+} 
+
 
 .nav-file-title.is-active,
 body:not(.is-grabbing) .nav-file-title:hover,
